<resources>
    <string name="app_name">Todo List</string>

    <string name="add_to_do_title">Criação de Item</string>
    <string name="tvEditTitle">Edição de item</string>

    <string name="hint_title">Título</string>
    <string name="hint_description">Descrição</string>

    <string name="bt_add">Adicionar</string>
    <string name="bt_edit">Editar</string>

    <string name="add_todo_success">Item adicionado com sucesso!</string>
    <string name="add_todo_editSuccess">Edição realizada com sucesso!</string>
    <string name="delete">Apagar</string>
    <string name="error_empty_description">Preencha a descrição</string>
    <string name="error_empty_title">Preencha o título</string>
    <string name="error_large_title">O título só permite até 15 caracteres.</string>
    <string name="error_small_title">O título deve ter no mínimo 3 caracteres.</string>
    <string name="mark">Marcar</string>
    <string name="unmark">Desmarcar</string>

    <string name="rb_high_priority">Alta</string>
    <string name="rb_medium_priority">Média</string>
    <string name="rb_low_priority">Baixa</string>
    <string name="tvPriority">"Prioridade:"</string>
    <string name="sort">Ordenar</string>
    <string name="title_asc">Título (Ascendente)</string>
    <string name="title_desc">Título (Descendente)</string>
    <string name="sort_priority_high">Prioridade Alta</string>
    <string name="sort_priority_medium">Prioridade Média</string>
    <string name="sort_priority_low">Prioridade Baixa</string>
</resources>
