<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuMark"
        android:icon="@android:drawable/checkbox_on_background"
        android:title="@string/mark"
        android:tooltipText="@string/delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuUnmark"
        android:icon="?android:attr/textCheckMarkInverse"
        android:title="@string/unmark"
        android:tooltipText="@string/unmark"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuDelete"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete"
        app:showAsAction="always"
        android:tooltipText="@string/delete" />

</menu>